k8s/django-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app
  labels:
    name: django-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
